<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Share">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/white"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@+id/button14"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/custom_buttons"
        android:onClick="reqestform"
        android:text="Submit A Request" />

    <Button
        android:id="@+id/button11"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button12"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/update_a_ride" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/delete_a_ride" />

    <Button
        android:id="@+id/button14"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button13"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/view_a_ride" />

    <Button
        android:id="@+id/button12"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="138dp"
        android:layout_marginRight="138dp"
        android:background="@drawable/custom_buttons"
        android:onClick="addshare"
        android:text="@string/post_a_ride" />

</RelativeLayout>